--- a/index.html
+++ b/index.html
@@ -26,20 +26,19 @@
 
     <div class="col m6 s10">
 
-      <div id="title" class="center-align"> 
-        WORDBRAIN SOLVER
-      </div>
+      <img src="title.png" class="center-align" id="title-image"> 
+      </img>
 
       <br/>
       
       <div id="main">
         <form id="inputForm">
           <div class="input-field">
-            <label for="inputGrid">Input grid here:</label>
+            <label for="inputGrid">Input grid:</label>
             <textarea id="inputGrid" class="materialize-textarea"></textarea>
           </div>
           <div class="input-field">
-            <label for="inputLengths">Input space-separated lengths here:</label>
+            <label for="inputLengths">Input space-separated lengths:</label>
             <input id="inputLengths" type="text" class="validate">
           </div>
         </form>
