--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <div class="row">
 
-    <div class="col m3 s1">  &nbsp;</div>
+    <div class="col l3 m2 s1">  &nbsp;</div>
 
-    <div class="col m6 s10">
+    <div class="col l6 m8 s10">
 
       <img src="title.png" class="center-align" id="title-image"> 
       </img>
@@ -63,7 +63,7 @@
     </div>
   </div>
 
-  <div class="col m3 s1"> </div>
+  <div class="col l3 m2 s1"> </div>
 </body>
 
 <script src="words.js"></script>
